Prevent hoz scrollbar from show up during transition

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -569,7 +569,7 @@ html[lang="zh-TW"] #content {
 	}
 }
 
-@media screen and (max-width: 1120px) {
+@media screen and (max-width: 1180px) {
 	$width: 25;
 	$sidebar_width: 5;
 	
